--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,1 +1,8 @@
 $body-font: Arial, helvetica, sans-serif;
+$secondary-font: Georgia, "Times New Roman", serif;
+$dark-bg: #657077;
+$light-bg: #C7C4CE;
+$accent-1: #657077;
+$accent-2: #554578;
+$white: #fff;
+$grey: #333;
